# agent-demo

./: .gitignore  ASYNC_VS_SYNC_COMPARISON.md  SUPERVISOR_SWARM_README.md  SUPERVISOR_SWARM_SUMMARY.md  async-supervisor-swarm.py  complete_type_annotations.py  flow-agent.py  handoff-agent.py  isinstance_usage_demo.py  judge-agent.py  langgraph-supervisor-swarm.py  main.py  mcp-agent.py  pyproject.toml  python_types_demo.py  run-supervisor-swarm.py  supervisor-swarm-demo.py  supervisor-swarm-simple.py  test-supervisor-swarm.py  tool-agent.py  type_usage_comparison.py
_examples_langchain/: classification.py  demo.py
_examples_langgraph/: agent.py  react_stategraph_react.py
langchain/: toolcalling.py
langgraph/: chatbot.py
multi-agent/: main.py
planner-test/: agent2.py  async-agent.py  ds-agent.py  main.py
