[project]
name = "agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[socks]>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-deepseek>=0.1.4",
    "langgraph>=0.6.10",
    "openai>=1.79.0",
    "openai-agents>=0.0.15",
    "pypdf>=6.1.0",
]
