[project]
name = "agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[socks]>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-deepseek>=0.1.4",
    "langchain-tavily>=0.2.12",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "openai>=1.79.0",
    "openai-agents>=0.0.15",
    "pypdf>=6.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "utils", "flow-agent", "handoff-agent", "judge-agent", "mcp-agent", "multi-agent", "tool-agent"]
